--- a/ServletJspPractice/src/main/webapp/index.html
+++ b/ServletJspPractice/src/main/webapp/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8">
+		<title>HTML入門</title>
+	</head>
+		<h1>HTMLを始めよう！</h1>
+		<p><a href = "https://www.google.com/">Googleへのリンク</a></p>
 
-</body>
+	</body>
 </html>
