--- a/SampleServletJsp/src/main/webapp/form.html
+++ b/SampleServletJsp/src/main/webapp/form.html
@@ -6,14 +6,14 @@
 </head>	
 <body>
 	<h1>登録情報を入力してください</h1>
-	<brform action="/javaweb/register" method="post">
+	<form action="/javaweb/register" method="post">
 	名前：<input type="text" name="pass" size="10"/><br/>
 	パスワード：<input type="password" name="pass" size="10"/><br/>
 	年齢：<input type="radio" name="age" value="child"/>18歳未満
 		<input type="radio" name="age" value="adult"/>18歳以上<br/>
-	開発経験：<imput type="checkbox" name="lang" value="Java"/>Java
-		<imput type="checkbox" name="lang" value="Python"/>Python
-		<imput type="checkbox" name="lang" value="JavaScript"/>JavaScript<br/>
+	開発経験：<input type="checkbox" name="lang" value="Java"/>Java
+		<input type="checkbox" name="lang" value="Python"/>Python
+		<input type="checkbox" name="lang" value="JavaScript"/>JavaScript<br/>
 	住所<select name="address" size="1">
 			<option value="北海道">北海道</option>
 			<option value="東北">東北</option>
